# dspy-cli

./: .gitignore  404.html  HOTRELOAD.md  IMPLEMENTATION.md  README.md  STREAMING.md  TRACING.md  dspy-cli-performance-plan.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  spec.md  todo.md
cli-reference/: index.html
contributing/: index.html
docs/: ASYNC-ARCHITECTURE.md  OPENAPI.md  cli-reference.md  configuration.md  contributing.md  deployment.md  gateways.md  getting-started.md  index.md  releasing.md
examples/blog-tools/: Dockerfile  README.md  check_tracing.py  dspy.config.yaml  openapi.json  pyproject.toml  tasks.md
examples/blog-tools/src/blog_tools/: __init__.py
examples/blog-tools/src/blog_tools/modules/: headline_generator_predict.py  image_description_generator_predict.py  image_headline_generator_predict.py  image_headliner.py  spell_checker_predict.py  summarizer_predict.py  summary_and_tags.py  tagger_cot.py  tagger_predict.py  tweet_extractor_predict.py
examples/blog-tools/src/blog_tools/signatures/: headline_generator.py  image_description_generator.py  spell_checker.py  summarizer.py  tagger.py  tweet_extractor.py
examples/blog-tools/tests/: test_modules.py
examples/code-review-agent/: .gitignore  Dockerfile  NOTES.md  README.md  dspy.config.yaml  openapi.json  pyproject.toml  test_webhook.py
examples/code-review-agent/data/: __init__.py  mcp_test.py
examples/code-review-agent/src/code_review_agent/: __init__.py
examples/code-review-agent/src/code_review_agent/gateways/: __init__.py  github_webhook.py
examples/code-review-agent/src/code_review_agent/modules/: pr_reviewer.py
examples/code-review-agent/src/code_review_agent/signatures/: review_pr.py
examples/code-review-agent/src/code_review_agent/utils/: __init__.py  github_app_auth.py  github_review_poster.py  github_tools.py  mcp_converter.py  pr_loader.py  redis_dedup.py
examples/code-review-agent/tests/: test_modules.py
examples/discord-mod/: Dockerfile  README.md  dspy.config.yaml  fly.toml  openapi.json  pyproject.toml
examples/discord-mod/data/: eval_dataset.jsonl  eval_dataset.py
examples/discord-mod/scripts/: test_discord_integration.py  test_dry_run.py  test_with_llm.py
examples/discord-mod/src/discord_mod/: __init__.py  readme.md
examples/discord-mod/src/discord_mod/gateways/: __init__.py  job_posting_gateway.py
examples/discord-mod/src/discord_mod/modules/: classify_job_posting.py
examples/discord-mod/src/discord_mod/utils/: discord_client.py  processed_store.py
examples/discord-mod/tests/: test_eval.py
releasing/: index.html
scripts/: release.sh
search/: search_index.json
specs/: CONCURRENCY.md  STREAMING.md  TRACING.md
tests/: README.md  __init__.py  smoke_test.py  test_commands_smoke.py  test_config.py  test_execution.py  test_executor.py  test_serve_integration.py  test_serve_validation.py  test_venv_utils.py
trace-viewer/: README.md  example_requirements.txt  viewer.py
(+99 files in other folders)
